add graphql and processSale controller